[package]
name = "ton_abi"
version = "1.0.1"

[dependencies]
ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }
ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }

base64 = "0.13.0"
num-bigint = "0.2.2"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
ed25519 = "1.0.1"
ed25519-dalek = "1.0.0-pre.4"
chrono = "0.4"
byteorder = "1.3.2"
failure = "0.1"
num-traits = "0.2.11"

[dev-dependencies.rand]
version = "0.7.3"

[features]
ci_run = []
