[package]
name = "ton_abi"
version = "2.1.0"
edition = "2018"

[dependencies]
ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }
ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }

base64 = "0.13.0"
num-bigint = "0.3"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
ed25519 = "1.2.0"
ed25519-dalek = { git = "https://github.com/broxus/ed25519-dalek.git" }
chrono = "0.4"
byteorder = "1.3.2"
anyhow = "1.0.42"
num-traits = "0.2.11"
thiserror = "1.0.26"
smallvec = { version = "1.6.1", features = ["const_generics", "union", "write"] }

[dev-dependencies.rand]
version = "0.8.4"

[features]
ci_run = []
asm = ["sha2/asm", "ed25519-dalek/asm"]
