[package]
name = "ton_abi"
version = "2.1.0"
edition = "2021"

[dependencies]
ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }
ton_block = { git = "https://github.com/tonred/ton-labs-block.git" }

base64 = "0.13.0"
num-bigint = "0.4"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
ed25519 = "1.2.0"
ed25519-dalek = { git = "https://github.com/broxus/ed25519-dalek.git" }
byteorder = "1.3.2"
anyhow = "1.0"
num-traits = "0.2"
thiserror = "1.0"
smallvec = { version = "1.8.0", features = ["const_generics", "union", "write"] }
js-sys = { version = "0.3.56", optional = true }

[dev-dependencies]
rand = "0.8.5"

[features]
web = ["js-sys"]
